# fer-parallel-programming-labs

./: .gitignore  CMakeLists.txt
examples/: hello_world.c  pi.c  send_receive.c
lab1/: lab1.c
lab2/: lab2.c
